ops/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ml-pipeline
  labels:
    name: ml-pipeline
    app: ml-pipeline-platform
    version: v1
